--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,9 @@
   <!-- <script src="https://unpkg.com/react@17/umd/react.production.min.js" crossorigin></script>
   <script src="https://unpkg.com/react-dom@17/umd/react-dom.production.min.js" crossorigin></script> -->
 
-  <script src="script.js" type="text/babel" crossorigin="use-credentials"></script>
+  <script src="./script.js" type="text/babel" crossorigin="use-credentials"></script>
+
+  <script src="https://unpkg.com/wf-react-simple-toast@1.1.2/dist/index.js"></script>
 
 </body>
 
