chore: add favicon

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Stock Calculator</title>
+  <link rel="icon" type="image/png" href="https://2.bp.blogspot.com/-UIl_IkqDqDk/UqfJ1E7OiXI/AAAAAAAAJGY/OwHbolOAJH4/s1600/showdown-2013-summoner-icon-1.png"/>
 </head>
 
 <body>
